Fix mobile header background color on dark mode

--- a/assets/css/misc/dark.css
+++ b/assets/css/misc/dark.css
@@ -66,7 +66,7 @@
 
 .dark-mode .gh-head,
 .dark-mode .off-canvas {
-    background-color: var(--dark-mode-bg-color);
+    background-color: var(--dark-mode-bg-color) !important;
 }
 
 .dark-mode .sep::after {
